# seQure

./: .gitignore  README.md
client/: app.py  pyproject.toml
client/seQure_client/: client.py  peer.py
client/sequre_cli/: client.py  main.py  peer.py  utils.py
server/: README.md  app.py  pyproject.toml
server/seQure_server/: __init__.py  relay.py
