[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequre-cli"
version = "0.1.0"
description = "seQure PQC CLI client"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0,<43.0.0",
  "pqcrypto>=0.1.3",
  "PyNaCl>=1.5.0,<2.0.0"
]

[project.scripts]
sequre = "sequre_cli.main:run"

[tool.setuptools]
packages = ["sequre_cli"]
